# sistema-licita-jp

docs/source_data/: filter-licitacoes.md
read-source-data/: pyproject.toml
read-source-data/read_source_data/: read_licitacoes_data.py
research_code/issue_1/: filter_licitacoes_exploration.py
research_code/issue_1/raw_data/: participante.html  secretarias-orgaos.html  unidades-interessadas.html
