[tool.poetry]
name = "read-source-data"
version = "0.1.0"
description = ""
authors = ["fbormann <felipe.bormann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
